Bake crash if you set GPU #40262

Closed
opened 2014-05-19 16:13:21 +02:00 by Wolfgang Faehnle · 6 comments

Opensuse 13.1/64
Intel i5 3770K
GTX 760
GTX 560Ti 448 Cores
Driver 331.49

Blender Version
Broken: db2d900 (Own build)
Worked: buildbot 003387f

Hi, during testing bake I switch to GPU and get strange results, fine, GPU does not work on GPU.
In my latest build I get a crash if I switch to GPU and try to bake.

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffd2099700 (LWP 14310)]

0x00007fffd22cc341 in ?? () from /usr/lib64/libcuda.so

(gdb) bt
  • 0 0x00007fffd22cc341 in ?? () from /usr/lib64/libcuda.so
  • 1 0x00007fffd21ff1d6 in ?? () from /usr/lib64/libcuda.so
  • 2 0x00007fffd21ddb75 in cuModuleGetTexRef () from /usr/lib64/libcuda.so
  • 3 0x00000000013068f7 in ccl::CUDADevice::tex_alloc(char const*, ccl::device_memory&, ccl::InterpolationType, bool) ()
  • 4 0x000000000130be87 in ccl::MultiDevice::tex_alloc(char const*, ccl::device_memory&, ccl::InterpolationType, bool) ()
  • 5 0x00000000012ec829 in ccl::SVMShaderManager::device_update(ccl::Device*, ccl::DeviceScene*, ccl::Scene*, ccl::Progress&) ()
  • 6 0x00000000012e1cee in ccl::Scene::device_update(ccl::Device*, ccl::Progress&) ()
  • 7 0x00000000012e3db7 in ccl::Session::update_scene() ()
  • 8 0x000000000127c9bb in ccl::BlenderSession::bake(BL::Object, std::string const&, BL::BakePixel, int, int, float*) ()
  • 9 0x0000000001278471 in ccl::bake_func(_object*, _object*) ()
  • 10 0x0000000001825aa7 in call_function (oparg=, pp_stack=0x7fffd2098340) at Python/ceval.c:4227
  • 11 PyEval_EvalFrameEx (f=f@entry=0x7fffcc5d1d18, throwflag=throwflag@entry=0) at Python/ceval.c:2829
    #12 0x0000000001825993 in fast_function (nk=, na=7, n=7, pp_stack=0x7fffd2098490, func=0x7fffde4e1840)
    at Python/ceval.c:4324
  • 13 call_function (oparg=, pp_stack=0x7fffd2098490) at Python/ceval.c:4252
  • 14 PyEval_EvalFrameEx (f=f@entry=0x7fffcc5d1af8, throwflag=throwflag@entry=0) at Python/ceval.c:2829
    #15 0x000000000181e404 in PyEval_EvalCodeEx (_co=0x7fffde55b780, globals=, locals=locals@entry=0x0,
    args=args@entry=0x7fffddff6ed0, argcount=8, kws=kws@entry=0x0, kwcount=kwcount@entry=0, defs=defs@entry=0x0, 
    defcount=defcount@entry=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3578
  • 16 0x00000000017881bc in function_call (func=0x7fffde4e1e18, arg=0x7fffddff6eb8, kw=0x0) at Objects/funcobject.c:632
  • 17 0x000000000175efea in PyObject_Call (func=0x7fffde4e1e18, arg=, kw=) at Objects/abstract.c:2067
  • 18 0x0000000000c1c08e in bpy_class_call ()
  • 19 0x00000000011dd03f in engine_bake ()
  • 20 0x0000000000b8c31f in RE_bake_engine ()
  • 21 0x0000000000ac2362 in bake.isra.3 ()
  • 22 0x0000000000ac324b in bake_startjob ()
  • 23 0x000000000089e16a in do_job_thread ()
  • 24 0x00007ffff63c70db in start_thread () from /lib64/libpthread.so.0
  • 25 0x00007ffff246990d in clone () from /lib64/libc.so.6

I will test this with older builds for myself but may better to disable GPU for baking at moment.

bake_test.blend

Open file switch to GPU, bake.

Thank you and cheers, mib

Opensuse 13.1/64 Intel i5 3770K GTX 760 GTX 560Ti 448 Cores Driver 331.49 **Blender Version** Broken: db2d900 (Own build) Worked: buildbot 003387f Hi, during testing bake I switch to GPU and get strange results, fine, GPU does not work on GPU. In my latest build I get a crash if I switch to GPU and try to bake. ``` Program received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffd2099700 (LWP 14310)] ``` 0x00007fffd22cc341 in ?? () from /usr/lib64/libcuda.so ``` (gdb) bt ``` - 0 0x00007fffd22cc341 in ?? () from /usr/lib64/libcuda.so - 1 0x00007fffd21ff1d6 in ?? () from /usr/lib64/libcuda.so - 2 0x00007fffd21ddb75 in cuModuleGetTexRef () from /usr/lib64/libcuda.so - 3 0x00000000013068f7 in ccl::CUDADevice::tex_alloc(char const*, ccl::device_memory&, ccl::InterpolationType, bool) () - 4 0x000000000130be87 in ccl::MultiDevice::tex_alloc(char const*, ccl::device_memory&, ccl::InterpolationType, bool) () - 5 0x00000000012ec829 in ccl::SVMShaderManager::device_update(ccl::Device*, ccl::DeviceScene*, ccl::Scene*, ccl::Progress&) () - 6 0x00000000012e1cee in ccl::Scene::device_update(ccl::Device*, ccl::Progress&) () - 7 0x00000000012e3db7 in ccl::Session::update_scene() () - 8 0x000000000127c9bb in ccl::BlenderSession::bake(BL::Object, std::string const&, BL::BakePixel, int, int, float*) () - 9 0x0000000001278471 in ccl::bake_func(_object*, _object*) () - 10 0x0000000001825aa7 in call_function (oparg=<optimized out>, pp_stack=0x7fffd2098340) at Python/ceval.c:4227 - 11 PyEval_EvalFrameEx (f=f@entry=0x7fffcc5d1d18, throwflag=throwflag@entry=0) at Python/ceval.c:2829 #12 0x0000000001825993 in fast_function (nk=<optimized out>, na=7, n=7, pp_stack=0x7fffd2098490, func=0x7fffde4e1840) ``` at Python/ceval.c:4324 ``` - 13 call_function (oparg=<optimized out>, pp_stack=0x7fffd2098490) at Python/ceval.c:4252 - 14 PyEval_EvalFrameEx (f=f@entry=0x7fffcc5d1af8, throwflag=throwflag@entry=0) at Python/ceval.c:2829 #15 0x000000000181e404 in PyEval_EvalCodeEx (_co=0x7fffde55b780, globals=<optimized out>, locals=locals@entry=0x0, ``` args=args@entry=0x7fffddff6ed0, argcount=8, kws=kws@entry=0x0, kwcount=kwcount@entry=0, defs=defs@entry=0x0, defcount=defcount@entry=0, kwdefs=0x0, closure=0x0) at Python/ceval.c:3578 ``` - 16 0x00000000017881bc in function_call (func=0x7fffde4e1e18, arg=0x7fffddff6eb8, kw=0x0) at Objects/funcobject.c:632 - 17 0x000000000175efea in PyObject_Call (func=0x7fffde4e1e18, arg=<optimized out>, kw=<optimized out>) at Objects/abstract.c:2067 - 18 0x0000000000c1c08e in bpy_class_call () - 19 0x00000000011dd03f in engine_bake () - 20 0x0000000000b8c31f in RE_bake_engine () - 21 0x0000000000ac2362 in bake.isra.3 () - 22 0x0000000000ac324b in bake_startjob () - 23 0x000000000089e16a in do_job_thread () - 24 0x00007ffff63c70db in start_thread () from /lib64/libpthread.so.0 - 25 0x00007ffff246990d in clone () from /lib64/libc.so.6 ``` ``` I will test this with older builds for myself but may better to disable GPU for baking at moment. [bake_test.blend](https://archive.blender.org/developer/F89439/bake_test.blend) Open file switch to GPU, bake. Thank you and cheers, mib

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Wolfgang Faehnle 2014-05-19 16:13:21 +02:00

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Sorry, "GPU does not work on GPU" meant "Bake does not work on GPU."

Sorry, "GPU does not work on GPU" meant "Bake does not work on GPU."

This issue was referenced by 0d9e6a736a

This issue was referenced by 0d9e6a736a410991ef9a11ef87c8d23c96199823

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0d9e6a736a.

Closed by commit 0d9e6a736a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40262
No description provided.