Fix T40262: cycles GPU bake crash due to kernels not loaded, randomly due to thread timing.