intern/cycles/render/session.cpp
@@ -592,9 +592,10 @@ void Session::run_cpu()
 		update_progressive_refine(true);
 }
 
-void Session::run()
+void Session::load_kernels()
 {
-	/* load kernels */
+	thread_scoped_lock scene_lock(scene->mutex);
+
 	if(!kernels_loaded) {
 		progress.set_status("Loading render kernels (may take a few minutes the first time)");
 
@@ -603,6 +604,7 @@ void Session::run()
 			if(message.empty())
 				message = "Failed loading render kernel, see console for errors";
 
+			progress.set_cancel(message);
 			progress.set_status("Error", message);
 			progress.set_update();
 			return;
@@ -610,6 +612,12 @@ void Session::run()
 
 		kernels_loaded = true;
 	}
+}
+
+void Session::run()
+{
+	/* load kernels */
+	load_kernels();
 
 	/* session thread loop */
 	progress.set_status("Waiting for render to start");
